2MIR-FP-main/Terraform/parkjihong_test/igw.tf
##IGW 생성
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "tf-igw"
  }
}
